# splinart_2026_lc

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  myst.yml  pyproject.toml
.github/workflows/: ci_publish_sphinx.yml
.github/workflows_save/: ci.yml
Documentations/: init_depot.md  notepad.md
docs/source/: index.rst
docs_md/source/: conf.py  index.md  index.rst  spline.rst
docs_md/source/api/: splinart.md  splinart.scripts.md  splinart.shapes.md  splinart.spline.rst
docs_md/source/notebooks/: circle.nblink
notebooks/: circle.ipynb
recipes/: meta.yaml
splinart/: __init__.py  draw.py  version.py
splinart/scripts/: __init__.py
splinart/shapes/: base.py
splinart/spline/: splint.py
src/splinart/: __init__.py  compute.py
src/splinart/scripts/: cli_splinart.py
src/splinart/shapes/: __init__.py
src/splinart/spline/: spline.py
tests/: test_all.py  test_spline.py
